# channelmap_generator

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  compose.dev.yml  docker-compose.yml  entrypoint.sh  env.template  generate_channel_maps.ipynb  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  draft-pdf.yml  tests.yml
JOSS_paper/: paper.md
channelmap_generator/: __init__.py  __main__.py  analytics.py  backend.py  constants.py  test_types.py  types.py
channelmap_generator/JOSS_paper/: paper.md
channelmap_generator/gui/: __init__.py  app_util.py  gui.py
channelmap_generator/utils/: gui.py  imro.py
channelmap_generator/wiring_maps/: 1.0_wiring.csv  2.0-4shanks_positions.csv  2.0-4shanks_wiring.csv
docs/: api.md  conf.py  getting-started.md  gui-guide.md  index.md  presets.md  troubleshooting.md
paper/: paper.bib  paper.md
pixelmap/: __init__.py  backend.py
pixelmap/gui/: app_util.py  gui.py
pixelmap/utils/: imro.py
pixelmap/wiring_maps/: 1.0_positions.csv  2.0-1shank_positions.csv  2.0-1shank_wiring.csv  2.0-4shanks_positions.csv  wiring_maps.pkl
tests/: README.md  __init__.py  conftest.py  test_analytics.py  test_core_functionality.py
tests/fixtures/: sample_1.0.imro  sample_2.0-1shank.imro  sample_2.0-4shanks.imro
