[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "channelmap-generator"
version = "0.1.3"
description = "Browser-based Neuropixels channelmap generator."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Maxime Beau", email = "maxime@princeton.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "panel>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "param>=1.13.0",
    "bokeh>=3.0.0",
    "dotenv>=0.9.9",
]

[project.gui-scripts]
cmap_gui = "channelmap_generator.__main__:main"

[project.urls]
Homepage = "https://github.com/m-beau/channelmap-generator"
Documentation = "https://github.com/m-beau/channelmap-generator#readme"
Repository = "https://github.com/m-beau/channelmap-generator"
Issues = "https://github.com/m-beau/channelmap-generator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["channelmap_generator*"]

[tool.setuptools.package-data]
channelmap_generator = [
    "wiring_maps/*.csv",
    "gui/*.png",
    "gui/*.svg",
    "example_layouts/*.pdf",
]
