[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "channelmap-generator"
dynamic = ["version"]
description = "Browser-based Neuropixels channelmap generator."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Maxime Beau", email = "maxime@princeton.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "panel>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "param>=1.13.0",
    "bokeh>=3.0.0",
    "dotenv>=0.9.9",
    "psutil>=7.1.0",
]

[project.gui-scripts]
cmap_gui = "channelmap_generator.gui.app_util:main"

[project.urls]
Homepage = "https://github.com/m-beau/channelmap_generator"
Documentation = "https://channelmap-generator.readthedocs.io"
Repository = "https://github.com/m-beau/channelmap_generator"
Issues = "https://github.com/m-beau/channelmap_generator/issues"

[tool.setuptools.dynamic]
version = {attr = "channelmap_generator.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["channelmap_generator*"]

[tool.setuptools.package-data]
channelmap_generator = [
    "wiring_maps/*.csv",
    "gui/*/*.png",
    "gui/*/*.svg",
    "example_layouts/*.pdf",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser",
    "sphinx-design",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
